# otus-rust-basic

./: Cargo.toml
hw_10/: Cargo.toml
hw_10/src/: lib.rs  main.rs
hw_2/src/: main.rs
hw_3/src/math/: vec.rs
hw_3/tests/: primitives_tests.rs  tuple_tests.rs  vec_tests.rs
hw_4/src/: lib.rs
hw_5/src/: math.rs
hw_5/src/math/: primitives.rs  tuple.rs  vec.rs
hw_5/tests/: primitives.rs  tuple.rs  vec.rs
hw_6/src/: lib.rs
hw_7/src/: main.rs
hw_8/: Cargo.toml
hw_8/src/: lib.rs  main.rs
hw_9/: Cargo.toml
hw_9/src/: lib.rs  macros.rs
